Fix hero alignment

--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -1,18 +1,20 @@
 body{
     padding: 0;
     margin: 0;
-
 }
 #hero{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     text-align: center;
 }
 .black-box{
     background: black;
-    width: 95vw;
-    height: 90vh;
-    margin: auto;
+    width: 95%;
+    height: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 .hello-text{
     width: 30%;
